Fixed bugs regarding dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   display: flex;
   justify-content: center;
 }
-body.dark {
+body.darkbody {
   background-color: #111726;
 }
 .nav {
